apps/plantsuite/controstation/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plantsuite-controlstation
  labels:
    app: plantsuite-controlstation
    app.kubernetes.io/name: plantsuite-controlstation
spec:
  type: ClusterIP
  selector:
    app: plantsuite-controlstation
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
