apps/plantsuite/controstation/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: plantsuite-controlstation
spec:
  hosts:
    - cstation.plantsuite.mes
  gateways:
    - istio-ingress/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: plantsuite-controlstation
